# plugin-framework

./: LICENSE  MANIFEST.in  README.rst  pyproject.toml
docs/source/: api.rst  conf.py  index.rst  plugin_common-json_handler.rst  plugin_common-plugin_specs.rst  plugin_common-utilities.rst  plugin_host-discovery.rst  plugin_source-interface.rst
plugin_common/: json_handler.py  plugin_specs.py  utilities.py
plugin_framework.egg-info/: entry_points.txt  requires.txt
plugin_host/: discovery.py
plugin_source/: interface.py
plugin_source/json/: plugin_source.json
